# crane-simulator

./: .gitignore  CMakeLists.txt  MainWindow.py  README.md  analysis.py  counter_jib.py  counterjib.py  crane.py  direct_stiffness_3d.py  environment.yml  gui.py  jib.py  main.py  mainwindow.ui  plotter.py  requirements.txt  setup.py  tower.py
craneSimulator/: __main__.py  exampleCrane.xml
craneSimulator/gui/: gui.py
craneSimulator/gui/plotting/: plotter.py
craneSimulator/gui/windows/: MainWindow.py  Ui_MainWindow.py  mainwindow.ui
craneSimulator/optimisation/: optimisation.py
craneSimulator/simulation/: analysis.py
craneSimulator/truss/: crane.py  dimensions.py
craneSimulator/truss/jibs/: counterjib.py  jib.py
craneSimulator/truss/tower/: tower.py
craneSimulator/util/: file_handler.py  string_handler.py
docs/: architecture
resources/cranes/: Liebherr520EC-B20.xml  cross_supportType_tower_crane.xml  exampleCrane.xml  final_crane.xml  limit_of_software.xml  no_supportType_tower_crane.xml  set-back_truss_tower_crane.xml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/crane/: CMakeLists.txt  analysis.cpp  analysis.h  crane.cpp  crane.h
src/crane/truss/: CMakeLists.txt  counterjib.cpp  counterjib.h  jib.cpp  jib.h  tower.cpp  tower.h
src/crane/truss/components/: CMakeLists.txt  beam.cpp  beam.h  comps.h  node.cpp  node.h
src/truss/: beam.cpp  beam.h  comps.h  counterjib.cpp  counterjib.h  crane.cpp  crane.h  jib.cpp  jib.h  node.cpp  node.h  tower.cpp  tower.h
src/util/: CMakeLists.txt  widget.cpp  widget.h
src/view/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  CraneTab.cpp  CraneTab.h  LeftSide.cpp  LeftSide.h  RightSide.cpp  RightSide.h  maincontent.cpp  maincontent.h  renderer.cpp  renderer.h
src/view/render/: CMakeLists.txt  renderer.cpp  renderer.h
src/view/settings/: CMakeLists.txt  counterjibsettings.cpp  counterjibsettings.h  cranesettings.cpp  cranesettings.h  jibsettings.cpp  jibsettings.h  towersettings.cpp  towersettings.h
tests/: CMakeLists.txt  example_test.cpp
tutorial/: cantilever_beam.py  mesh_case21.vtk  mesh_case22.vtk  mesh_case23.vtk  mesh_case24.vtk  quadrangular_shape_mesh.py  sl.vtk
